--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html>
+  
+<head>
+<style>
+body {
+  background-image: url('images/background.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;  
+  background-size: cover;
+}
+</style>
+</head>
+  
+<body>
+  
+<img src="images/banner.png" alt="Paris" class="center">
+
+<p>Coming soon...</p>
+</body>
+  
+</html>
