refactor: Update index.html

--- a/index.html
+++ b/index.html
@@ -1,22 +1,12 @@
 <!DOCTYPE html>
 <html>
-  
-<head>
-<style>
-body {
-  background-image: url('images/background.png');
-  background-repeat: no-repeat;
-  background-attachment: fixed;  
-  background-size: cover;
-}
-</style>
-</head>
-  
-<body>
-  
-<img src="images/banner.png" alt="Paris" class="center">
-
-<p>Coming soon...</p>
-</body>
-  
+  <head>
+    <title>The Aether</title>
+    <meta name="description" content="The official website for the Aether Team.">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  </head>
+  <body class="landing-body">
+    <img src="images/banner.png" alt="The Aether" class="landing-banner">
+    <p>Coming soon...</p>
+  </body>
 </html>
