refactor: Update index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>The Aether</title>
     <meta name="description" content="The official website for the Aether Team.">
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="stylesheet" href="site.css">
   </head>
   <body class="landing-body">
     <img src="images/banner.png" alt="The Aether" class="landing-banner">
