--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>The Aether</title>
     <meta name="description" content="The official website for the Aether Team.">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="css/site.css">
   </head>
   <body class="landing-body">
