refactor: Update index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body class="landing-body">
     <img src="images/banner.png" alt="The Aether" class="landing-banner">
-    <p>Coming soon...</p>
+    <p class="landing-text">Coming soon...</p>
   </body>
 </html>
