--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body class="landing-body">
     <img src="images/banner.png" alt="The Aether" class="landing-banner">
+    <iframe width="840" height="630"
+      src="https://www.youtube.com/watch?v=fx2Z5ZD_Rbo">
+    </iframe>
     <p class="landing-text">Coming soon...</p>
   </body>
 </html>
