--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="landing-body">
     <img src="images/banner.png" alt="The Aether" class="landing-banner">
-    <iframe style="display: block; margin: auto;" width="840" height="630" src="https://www.youtube.com/watch?v=fx2Z5ZD_Rbo"></iframe>
+    <iframe type="text/html" style="display: block; margin: auto;" width="840" height="630" src="https://www.youtube.com/embed/fx2Z5ZD_Rbo&origin=https://aether-mod.net/"></iframe>
     <p class="landing-text">Coming soon...</p>
   </body>
 </html>
