refactor: new link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="landing-body">
     <img src="images/banner.png" alt="The Aether" class="landing-banner">
-    <iframe style="display: block; margin: auto;" width="1280" height="720" src="https://www.youtube.com/embed/xZIKqbgTSNw?si=KMukV1_Fz2UHbmCE" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe style="display: block; margin: auto;" width="1280" height="720" src="https://www.youtube.com/embed/jKu3fAZSaPw?si=w4atjumtTD5mcoSb" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <p class="landing-text">Coming soon...</p>
   </body>
 </html>
