--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="landing-body">
     <img src="images/banner.png" alt="The Aether" class="landing-banner">
-    <iframe style="display: block; margin: auto;" width="1280" height="720" src="https://www.youtube.com/embed/jKu3fAZSaPw?si=w4atjumtTD5mcoSb" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <p class="landing-text">Coming soon...</p>
+    <a href="https://www.makeship.com/products/aerbunny-plush"><img src="https://pbs.twimg.com/media/GYfsBl2WkAAGLgD?format=jpg&name=medium" alt="Aerbunny">
+<!--     <p class="landing-text">Coming soon...</p> -->
   </body>
 </html>
