--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="css/site.css">
   </head>
-  <body class="landing-body">
+  <body class="landing-body" style="text-align: center;">
     <img src="images/banner.png" alt="The Aether" class="landing-banner">
     <a style="display: block; margin: auto;" width="1280" height="1280" href="https://www.makeship.com/products/aerbunny-plush"><img src="https://pbs.twimg.com/media/GYfsBl2WkAAGLgD?format=jpg&name=medium" alt="Aerbunny">
 <!--     <p class="landing-text">Coming soon...</p> -->
